--- a/DiabetesApp/app/src/main/res/layout/activity_patient__signup.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_patient__signup.xml
@@ -51,6 +51,25 @@
                     android:text="Enter Name"
                     android:textSize="40dp" />
 
+                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <RadioButton android:id="@+id/clinic1"
+                        android:layout_width="200dp"
+                        android:layout_height="60dp"
+                        android:text="Clinic 1 "
+                        android:textSize="40dp"
+                        android:onClick="onRadioButtonClicked"/>
+                    <RadioButton android:id="@+id/clinic2"
+                        android:layout_width="200dp"
+                        android:layout_height="60dp"
+                        android:text="Clinic 2"
+                        android:textSize="40dp"
+                        android:onClick="onRadioButtonClicked"/>
+                </RadioGroup>
+
+
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="wrap_content"
