--- a/DiabetesApp/app/src/main/res/layout/doctor_dashboard_list_item.xml
+++ b/DiabetesApp/app/src/main/res/layout/doctor_dashboard_list_item.xml
@@ -24,6 +24,8 @@
         android:id="@+id/imageView"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
