Changed password and added manual data screen

--- a/DiabetesApp/app/src/main/res/layout/activity_patient__login.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_patient__login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#C8E6C9"
     tools:context=".Patient_Login">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -32,8 +33,8 @@
         android:layout_width="99dp"
         android:layout_height="75dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="168dp"
-        android:layout_marginRight="168dp"
+        android:layout_marginEnd="244dp"
+        android:layout_marginRight="244dp"
         android:text="Back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
