--- a/DiabetesApp/app/src/main/res/layout/activity_patient__sign_up__password.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_patient__sign_up__password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C8E6C9"
-    tools:context=".Patient_Input_Password">
+    tools:context=".Patient_SignUp_Password">
 
     <com.andrognito.patternlockview.PatternLockView
         android:id="@+id/pattern_lock_view"
@@ -13,21 +13,21 @@
         android:layout_height="280dp"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/enter"
-        android:layout_width="120dp"
-        android:layout_height="71dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="412dp"
         android:background="@color/colorPrimary"
         android:text="Enter"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
