Fixed back buttons

--- a/DiabetesApp/app/src/main/res/layout/activity_patient__data__enter__manual.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_patient__data__enter__manual.xml
@@ -33,4 +33,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/back"
+        android:layout_width="99dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="244dp"
+        android:layout_marginRight="244dp"
+        android:text="Back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
