--- a/Doctor_App/app/src/main/res/layout/activity_patient__signup.xml
+++ b/Doctor_App/app/src/main/res/layout/activity_patient__signup.xml
@@ -52,29 +52,16 @@
                     android:text="Enter Name"
                     android:textSize="40dp" />
 
-                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="match_parent"
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <RadioButton android:id="@+id/clinic1"
-                        android:layout_width="200dp"
-                        android:layout_height="60dp"
-                        android:text="Clinic 1 "
-                        android:textSize="40dp"
-                        android:onClick="onRadioButtonClicked"/>
-                    <RadioButton android:id="@+id/clinic2"
-                        android:layout_width="200dp"
-                        android:layout_height="60dp"
-                        android:text="Clinic 2"
-                        android:textSize="40dp"
-                        android:onClick="onRadioButtonClicked"/>
-                </RadioGroup>
-
+                    android:background="@color/white" />
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="20dp"
