Update doc app UI and filenames

--- a/Doctor_App/app/src/main/res/layout/activity_info.xml
+++ b/Doctor_App/app/src/main/res/layout/activity_info.xml
@@ -133,7 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:onClick="delete"
-        android:text="@string/action_delete"
+        android:text="@string/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
