--- a/Doctor_App/app/src/main/res/layout/activity_login.xml
+++ b/Doctor_App/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C8E6C9"
-    tools:context="com.example.doctor_app.Doctor_Login">
+    tools:context="com.example.doctor_app.Login">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHorizontal"
@@ -113,7 +113,7 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonBack"
+        android:id="@+id/buttonForgot"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -121,7 +121,9 @@
         android:layout_marginRight="16dp"
         android:layout_toStartOf="@id/buttonNext"
         android:layout_toLeftOf="@id/buttonNext"
-        android:text="@string/action_sign_in_back"
+        android:onClick="forgotPassword"
+        android:text="@string/action_sign_in_forgot"
+        android:textColorLink="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonNext"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
