--- a/DiabetesApp/app/src/main/res/layout/activity_camera.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_camera.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BloodPressureCamera">
+    android:background="#C8E6C9"
+    tools:context=".Camera">
 
     <SurfaceView
         android:id="@+id/surface_view"
