--- a/DiabetesApp/app/src/main/res/layout/activity_manual.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_manual.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C8E6C9"
-    tools:context=".DataEnterManual">
+    tools:context=".Manual">
 
     <EditText
         android:id="@+id/enterData"
